added answers to the questions

--- a/SageMaker-Project.ipynb
+++ b/SageMaker-Project.ipynb
@@ -853,7 +853,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer:**"
+    "**Answer:**    \n",
+    "These methods make the embedding of same size by padding 0 in the vector representation."
    ]
   },
   {
@@ -5445,7 +5446,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer:**"
+    "**Answer:**   \n",
+    "This XGBoost model has better accuracy.\n",
+    "Actually XGBoost uses the boosting technique which provides extra accuracy gain of 3-4% .\n",
+    "XGBoost is better for sentiment analysis because of better accuracy provided."
    ]
   },
   {
@@ -5878,7 +5882,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer:**"
+    "**Answer:**    \n",
+    "eg : ` This movie is great.  `\n",
+    "predicted sentiment : ` positive `"
    ]
   },
   {
